--- a/STUDY/Makefile
+++ b/STUDY/Makefile
@@ -1,23 +1,10 @@
 CC = gcc
-PROGRAMS = block block2 gethtml polling polling2 talk_client talk_server tcp_c tcp_s
+SRCS = $(wildcard *.c)
+PROGRAMS = $(basename $(SRCS))
 
-block: block.c
-	$(CC) -Wall -o $@ $^
-block2: block2.c
-	$(CC) -Wall -o $@ $^
-gethtml: gethtml.c
-	$(CC) -Wall -o $@ $^
-polling: polling.c
-	$(CC) -Wall -o $@ $^
-polling2: polling2.c
-	$(CC) -Wall -o $@ $^
-talk_client: talk_client.c
-	$(CC) -Wall -o $@ $^
-talk_server: talk_server.c
-	$(CC) -Wall -o $@ $^
-tcp_c: tcp_c.c
-	$(CC) -Wall -o $@ $^
-tcp_s: tcp_s.c
+all: $(PROGRAMS)
+
+%: %.c
 	$(CC) -Wall -o $@ $^
 
 clean:
